Fixed navbar rendering behind canvas

--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,7 @@
   gap: 40px;
   min-height: 70px;
   background-color: aliceblue;
+  z-index: 1;
   /* box-sizing: border-box; */
 }
 
@@ -111,7 +112,7 @@
     position: absolute;
     flex-direction: column;
     gap: 0;
-    top: 70px;
+    top: 65px;
     left: -100%;
     text-align: start;
     width: 100%;
